--- a/assets/styles.css
+++ b/assets/styles.css
@@ -214,7 +214,7 @@ FONTS
         padding: 50px 0;
     }
     img#traveler{
-        width: 50%;
+        max-height: 330px;
     }
     img#builder{
         width: 70%;
