--- a/assets/styles.css
+++ b/assets/styles.css
@@ -86,6 +86,8 @@ img{
     padding-bottom: 56.25%; /* 16:9 */
     padding-top: 25px;
     height: 0;
+    max-width: 853px;
+    margin: 0 auto;
 }
 .videoWrapper iframe {
     position: absolute;
