--- a/assets/styles.css
+++ b/assets/styles.css
@@ -79,15 +79,14 @@ img{
     text-shadow: none;
 }
 .video .col{
-    width: 100%;
+    width: 70%;
+    margin: 0 auto;
 }
 .videoWrapper {
     position: relative;
     padding-bottom: 56.25%; /* 16:9 */
     padding-top: 25px;
     height: 0;
-    max-width: 853px;
-    margin: 0 auto;
 }
 .videoWrapper iframe {
     position: absolute;
@@ -208,6 +207,9 @@ MEDIA QUERIES
     }
     #clouds{
         display: none;
+    }
+    .video .col{
+        width: 90%;
     }
     .love{
         max-width: 30px;
