Project Details Update

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -141,7 +141,7 @@ footer,
 
 }
 #first-site{
-    background-image: linear-gradient(rgba(242, 242, 242, 0.6),rgba(60, 145, 177, 0.8)), url(img/brainfriendz.jpg) ;
+    background-image: linear-gradient(rgba(242, 242, 242, 0.6),rgba(60, 145, 177, 0.8)), url(img/tearepublic.jpg) ;
 
 }
 #second-site{
